--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -37,7 +37,7 @@
             android:textSize="14sp" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
